--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blogging-app-using-mern",
+  "name": "blogging-app-Gops",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://mehulk05.github.io/Blogapp-using-MERN",
