--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blogging-app-Gops",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mehulk05.github.io/Blogapp-using-MERN",
+  "homepage": "https://Gpcoder12.github.io/Blogapp-using-MERN",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
